# LeverX-Homework-5

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
api/: __init__.py  settings.py  urls.py
courses/: admin.py  models.py  permissions.py  serializers.py  services.py  tests.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_initial.py
homework/: admin.py  models.py  permissions.py  serializers.py  tests.py  views.py
homework/migrations/: 0001_initial.py  0002_initial.py
tests/: conftest.py  factories.py  test_smoke.py
users/: admin.py  apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py
