[project]
name = "leverx-homework-5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=45.0.6",
    "django>=5.0,<5.1",
    "django-environ>=0.12.0",
    "django-filter>=25.1",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-nested-routers>=0.94.2",
    "drf-spectacular>=0.28.0",
    "pymysql>=1.1.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "pytest-django>=4.9.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.1",
    "factory-boy>=3.3.0",
    "faker>=30.6.0",
]

[tool.django]
settings-module = "api.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "api.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["tests"]
addopts = "-ra --strict-markers --disable-warnings --maxfail=1 --cov=."
